--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "dependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/preset-react": "^7.18.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^5.0.2",
-    "jest": "^29.5.0",
-    "rollup": "^3.21.6"
-  }
+   "name": "project1",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts":{
+      "build": "rollup -c -w",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+    "dependencies":{
+	"@babel/core": "^7.21.8",
+	"@babel/preset-react": "^7.18.6",
+	"react": "^18.2.0",
+	"react-dom": "^18.2.0"
+    },
+    "devDependencies":{
+	"@rollup/plugin-babel": "^6.0.3",
+	"@rollup/plugin-commonjs": "^24.1.0",
+	"@rollup/plugin-node-resolve": "^15.0.2",
+	"@rollup/plugin-replace": "^5.0.2",
+	"jest": "^29.5.0",
+	"rollup": "^3.21.6"
+    }
 }
