--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "description": "",
    "main": "index.js",
    "scripts":{
-      "build": "rollup -c -w",
+       "autobuild": "rollup -c -w",
+       "build": "rollup -c",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
     "dependencies":{
