--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
    "dependencies": {
       "@babel/preset-react": "^7.18.6",
       "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+      "react-dom": "^18.2.0",
+      "serve": "^14.2.0"
    },
    "devDependencies": {
       "@babel/core": "^7.21.8",
