--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-   "name": "project1",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "autobuild": "rollup -c -w",
-      "build": "rollup -c",
-      "serve": "serve public",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "dependencies": {
-      "@babel/preset-react": "^7.18.6",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "serve": "^14.2.0"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.21.8",
-      "@babel/preset-env": "^7.21.5",
-      "@rollup/plugin-babel": "^6.0.3",
-      "@rollup/plugin-commonjs": "^24.1.0",
-      "@rollup/plugin-node-resolve": "^15.0.2",
-      "@rollup/plugin-replace": "^5.0.2",
-      "jest": "^29.5.0",
-      "rollup": "^3.21.6"
-   }
+    "name": "project1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+	"autobuild": "rollup -c -w",
+	"build": "rollup -c",
+	"serve": "serve public",
+	"test": "jest"
+    },
+    "dependencies": {
+	"@babel/preset-react": "^7.18.6",
+	"react": "^18.2.0",
+	"react-dom": "^18.2.0",
+	"serve": "^14.2.0"
+    },
+    "devDependencies": {
+	"@babel/core": "^7.21.8",
+	"@babel/preset-env": "^7.21.5",
+	"@rollup/plugin-babel": "^6.0.3",
+	"@rollup/plugin-commonjs": "^24.1.0",
+	"@rollup/plugin-node-resolve": "^15.0.2",
+	"@rollup/plugin-replace": "^5.0.2",
+	"jest": "^29.5.0",
+	"rollup": "^3.21.6"
+    }
 }
