--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"autobuild": "rollup -c -w",
 	"build": "rollup -c",
 	"serve": "serve public",
+	"inline": "bash inline_version.sh",	
 	"test": "jest"
     },
     "dependencies": {
